# sctools

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
doc/: sctools demo.ipynb  tutorial.ipynb
scripts/: sctools
sctools/: __init__.py  _version.py  arguments.py  cli.py  genotype.py  replace.py  sctools.py
tests/counts/: barcodes.tsv  genes.tsv  matrix.mtx
