[metadata]
name = sctools
version = 0.8.0
project_urls =
    Bug Tracker = https://github.com/timoast/sctools/issues
author = Tim Stuart
author_email = stuartt@gis.a-star.edu.sg
description = Single cell tools
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
install_requires =
    pysam >= 0.14
    scipy
    numpy
    pandas
    matplotlib
    scikit-learn
    biopython
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts = 
    sctools = sctools.arguments:main


